--- a/frontend.html
+++ b/frontend.html
@@ -93,7 +93,7 @@
         <p>Our mission is to provide a nurturing and challenging environment where students excel academically, socially, and personally.</p>
     </section>
     <footer>
-        <p>&copy; 2025 [School Name]. All Rights Reserved.</p>
+        <p>&copy; 2025. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
